update padding in large text chunks index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <a href="https://twitter.com/huangcza">Twitter</a>
                 </p>
 
-              <td style="padding:1%;width:70%;vertical-align:middle">
+              <td style="padding:20px;width:70%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
                     Cheng-Zhi Anna Huang  黃成之
                 </p>
@@ -65,7 +65,7 @@
           </td>
          </tr>
          <tr>
-          <td style="padding-left:20px;width:100%;vertical-align:middle">
+          <td style="padding:20px;width:100%;vertical-align:middle">
             <h2>Research Interests</h2>
             <p>
             I’m interested in taking an <strong>interaction-driven</strong> approach to designing <strong>Generative AI</strong>, to enable <strong>new ways of interacting with music</strong> (and AI) that can extend how we understand, learn, and create music. I aim to partner with musicians, to design for the specificity of their creative practice and tradition, which inevitably invites new ways of thinking about <strong>generative modeling</strong> and <strong>Human-AI collaboration</strong>.
