Update index.html update position

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     Cheng-Zhi Anna Huang  黃成之
                 </p>
 
-                <p>In Fall 2024, I will be joining <a href="https://web.mit.edu/">Massachusetts Institute of Technology</a> (MIT) as faculty, with a shared position between <a href="https://www.eecs.mit.edu/">Electrical Engineering and Computer Science</a> (EECS) and <a href="https://mta.mit.edu/">Music and Theater Arts</a> (MTA). 
-                Currently, I am a Research Scientist at <a href="https://magenta.tensorflow.org/">Magenta</a> in <a href="https://deepmind.google/">Google DeepMind</a>, working on generative models and interfaces to support human-AI partnerships in music making. 
+                <p>In Fall 2024, I started a faculty position at <a href="https://web.mit.edu/">Massachusetts Institute of Technology</a> (MIT) as faculty, with a shared position between <a href="https://www.eecs.mit.edu/">Electrical Engineering and Computer Science</a> (EECS) and <a href="https://mta.mit.edu/">Music and Theater Arts</a> (MTA). 
+                For the past 8 years, I have been a researcher at <a href="https://magenta.tensorflow.org/">Magenta</a> in Google Brain and then <a href="https://deepmind.google/">Google DeepMind</a>, working on generative models and interfaces to support human-AI partnerships in music making. 
                 </p>
                 <p>
                 I am the creator of the ML model Coconet that powered Google’s first AI Doodle, the <a href="https://magenta.tensorflow.org/coconet">Bach Doodle</a>. In two days, Coconet harmonized <strong><em>55 million</em></strong> melodies from users around the world. In 2018, I created <a href="https://magenta.tensorflow.org/music-transformer">Music Transformer</a>, a breakthrough in generating music with long-term structure, and the first successful adaptation of the transformer architecture to music.  Our ICLR paper is currently the <strong>most cited paper</strong> in music generation. 
