Update index.html more position updates

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 I am the creator of the ML model Coconet that powered Google’s first AI Doodle, the <a href="https://magenta.tensorflow.org/coconet">Bach Doodle</a>. In two days, Coconet harmonized <strong><em>55 million</em></strong> melodies from users around the world. In 2018, I created <a href="https://magenta.tensorflow.org/music-transformer">Music Transformer</a>, a breakthrough in generating music with long-term structure, and the first successful adaptation of the transformer architecture to music.  Our ICLR paper is currently the <strong>most cited paper</strong> in music generation. 
                 </p>
                 <p>
-                I hold a <a href="https://cifar.ca/bios/cheng-zhi-anna-huang/">Canada CIFAR AI Chair</a> at <a href="https://mila.quebec/en/">Mila</a>, and an adjunct professor at <a href="https://diro.umontreal.ca/english/home/">University of Montreal</a>. I was a judge then organizer for <a href="https://www.aisongcontest.com/the-2023-finalists">AI Song Contest</a> 2020-22.
+                I was a <a href="https://cifar.ca/bios/cheng-zhi-anna-huang/">Canada CIFAR AI Chair</a> at <a href="https://mila.quebec/en/">Mila</a>, and continue to hold an adjunct professorship at <a href="https://diro.umontreal.ca/english/home/">University of Montreal</a>. I was a judge then organizer for <a href="https://www.aisongcontest.com/the-2023-finalists">AI Song Contest</a> 2020-22.
                 I did my PhD at Harvard University, master’s at the MIT Media Lab, and a dual bachelor’s at University of Southern California in music composition and CS. 
                 </p>
               </td> 
