Update index.html recruiting tldr

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
          <tr>
           <td style="padding-left:20px;padding-right:20px;width:100%;vertical-align:middle">
           <div style="background-color: #f6f6f6; padding:.5em 1.5em .5em;">
-            <p>🎵 I'm recruiting PhD students for Fall 2024 at <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">MIT EECS</a> (apply by December 15). I'm also recruiting Postdocs, at MIT for Fall 2024, and at <a href="https://mila.quebec/en/">Mila</a> for early 2024 (with a possibility of continuing at MIT). See <a href="#recruiting">recruiting</a> section below.&nbsp;🎵 
+            <p>🎵 I'm recruiting (for Fall 2025) Postdocs through MIT's <a href="https://computing.mit.edu/tayebati-postdoctoral-fellowship-program/">College of Computing</a> (by Dec 31) and <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> (TBA, likely mid Jan), 
+		    and PhD students through <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">MIT EECS</a>. See <a href="#recruiting">recruiting</a> section below for more details.&nbsp;🎵 
             </p>
           </div>
           <br>
