Update index.html extra typo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Cheng-Zhi Anna Huang  黃成之
                 </p>
 
-                <p>In Fall 2024, I started a faculty position at <a href="https://web.mit.edu/">Massachusetts Institute of Technology</a> (MIT) as faculty, with a shared position between <a href="https://www.eecs.mit.edu/">Electrical Engineering and Computer Science</a> (EECS) and <a href="https://mta.mit.edu/">Music and Theater Arts</a> (MTA). 
+                <p>In Fall 2024, I started a faculty position at <a href="https://web.mit.edu/">Massachusetts Institute of Technology</a> (MIT), with a shared position between <a href="https://www.eecs.mit.edu/">Electrical Engineering and Computer Science</a> (EECS) and <a href="https://mta.mit.edu/">Music and Theater Arts</a> (MTA). 
                 For the past 8 years, I have been a researcher at <a href="https://magenta.tensorflow.org/">Magenta</a> in Google Brain and then <a href="https://deepmind.google/">Google DeepMind</a>, working on generative models and interfaces to support human-AI partnerships in music making. 
                 </p>
                 <p>
