Update index.html recruiting tldr more

--- a/index.html
+++ b/index.html
@@ -59,9 +59,14 @@
          <tr>
           <td style="padding-left:20px;padding-right:20px;width:100%;vertical-align:middle">
           <div style="background-color: #f6f6f6; padding:.5em 1.5em .5em;">
-            <p>🎵 I'm recruiting (for Fall 2025) Postdocs through MIT's <a href="https://computing.mit.edu/tayebati-postdoctoral-fellowship-program/">College of Computing</a> (by Dec 31) and <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> (TBA, likely mid Jan), 
-		    and PhD students through <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">MIT EECS</a> (by Dec 1). See <a href="#recruiting">recruiting</a> section below for more details.&nbsp;🎵 
-            </p>
+          <p> 🎵
+	     We have multiple Postdoc positions open for Fall 2025 at <a href="https://musictech.mit.edu/postdoctoral-opportunities/">MIT Music Technology</a>, 
+	     through <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> 
+	     as well as <a href=”https://computing.mit.edu/”>the College of Computing</a>. 
+	     For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1). 
+	     See <a href="#recruiting">recruiting</a> section below for more details.&nbsp;🎵 
+          </p>
+
           </div>
           <br>
           </td>
@@ -428,17 +433,17 @@
       <h2 style="padding-top:40px;">Recruiting</h2>
     </div>
 
-    <p>
-    If you are interested in working with me as a <strong>PhD student</strong>, consider applying to <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">MIT EECS</a> (by December 15th). In the application <a href="https://gradapply.mit.edu/eecs">form</a>, you can find my name ("Huang, Anna") in the "potential research advisor" dropdown menu. <br>
+    <p>We have multiple Postdoc positions open for Fall 2025 at <a href="https://musictech.mit.edu/postdoctoral-opportunities/">MIT Music Technology</a>.  
+	    I'm particularly interested in
+    </p>
+    If you are interested in working with me as a <strong>PhD student</strong>, consider applying to <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">MIT EECS</a> (by December 1st). In the application <a href="https://gradapply.mit.edu/eecs">form</a>, you can find my name ("Huang, Anna") in the "potential research advisor" dropdown menu. <br>
     </p>
     <p>
-    For indicating "research field of interest" in the application form, we don't have music technology included in the dropdown menu yet (it'll be there next year!). For now, you can choose any field you're most interested in, such as (but not limited to) ML General Interests, Natural Language and Speech Processing, Reinforcement Learning, Deep Learning, Human Computer Interaction, or Cognitive AI, etc.<br>
+    For indicating "research field of interest" in the application form, if we don't have music technology included in the dropdown menu yet, you can choose any field you're most interested in, such as (but not limited to) ML General Interests, Natural Language and Speech Processing, Reinforcement Learning, Deep Learning, Human Computer Interaction, or Cognitive AI, etc.<br>
     </p>
     <p>
-    Letters of recommendations are accepted up till the end of December. We'll reach out if additional information is needed. You'll probably hear back from MIT in February. Best of luck!
+    We'll reach out if additional information is needed. You'll probably hear back from MIT in February. Best of luck!
     </p>  
-    <p>I'm actively recruiting <strong>Postdocs</strong>, at MIT for Fall 2024, and at <a href="https://mila.quebec/en/">Mila</a> for early 2024 (with a possibility of continuing at MIT). Email me if you're interested, with your CV and research interests. Thanks!
-    </p>
   </td>
 </tr>
 
