--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
           <td style="padding-left:20px;padding-right:20px;width:100%;vertical-align:middle">
           <div style="background-color: #f6f6f6; padding:.5em 1.5em .5em;">
           <p> 🎵
-	     We have multiple Postdoc positions open for Fall 2025 at <a href="https://musictech.mit.edu/postdoctoral-opportunities/">MIT Music Technology</a>, 
-	     through <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> 
-	     as well as <a href=”https://computing.mit.edu/”>the College of Computing</a>. 
-	     For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1). 
-	     See <a href="#recruiting">recruiting</a> section below for more details.&nbsp;🎵 
+	     🎵 We have multiple Postdoc positions open for Fall 2025 at <a href="https://musictech.mit.edu/postdoctoral-opportunities/">MIT Music Technology</a>, 
+	     through the <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> 
+	     as well as the <a href=”https://computing.mit.edu/”>College of Computing</a>. &nbsp;&nbsp;
+	     
+	     🎵 For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1). 
+	     See <a href="#recruiting">recruiting</a> section below for more details.&nbsp; 
           </p>
 
           </div>
