Update index.html recruiting text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	     through the <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> 
 	     as well as the <a href=”https://computing.mit.edu/”>College of Computing</a>. &nbsp;&nbsp;
 	     
-	     🎵 For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1). 
+	     🎵 For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1st). 
 	     See <a href="#recruiting">recruiting</a> section below for more details.&nbsp; 
           </p>
 
@@ -435,14 +435,11 @@
     </div>
 
     <p>We have multiple Postdoc positions open for Fall 2025 at <a href="https://musictech.mit.edu/postdoctoral-opportunities/">MIT Music Technology</a>.  
-	    I'm particularly interested in
-    </p>
-    If you are interested in working with me as a <strong>PhD student</strong>, consider applying to <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">MIT EECS</a> (by December 1st). In the application <a href="https://gradapply.mit.edu/eecs">form</a>, you can find my name ("Huang, Anna") in the "potential research advisor" dropdown menu. <br>
+	    I'm particularly interested in thinking about multi-agent reinforcement learning, human-ai communication, interpretability, and visualization, in the context of designing interactive systems that enable musicians to jam with generative agents.
     </p>
     <p>
+    For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1st). 
     For indicating "research field of interest" in the application form, if we don't have music technology included in the dropdown menu yet, you can choose any field you're most interested in, such as (but not limited to) ML General Interests, Natural Language and Speech Processing, Reinforcement Learning, Deep Learning, Human Computer Interaction, or Cognitive AI, etc.<br>
-    </p>
-    <p>
     We'll reach out if additional information is needed. You'll probably hear back from MIT in February. Best of luck!
     </p>  
   </td>
