Update index.html typos

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
          <tr>
           <td style="padding-left:20px;padding-right:20px;width:100%;vertical-align:middle">
           <div style="background-color: #f6f6f6; padding:.5em 1.5em .5em;">
-          <p> 🎵
+          <p>
 	     🎵 We have multiple Postdoc positions open for Fall 2025 at <a href="https://musictech.mit.edu/postdoctoral-opportunities/">MIT Music Technology</a>, 
 	     through the <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> 
-	     as well as the <a href=”https://computing.mit.edu/”>College of Computing</a>. &nbsp;&nbsp;
+	     as well as the <a href=”https://computing.mit.edu/”>College of Computing</a>.
 	  </p>
 	  <p>  
 	     🎵 For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1st). 
@@ -440,7 +440,8 @@
     </p>
     <p>
     For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1st). 
-    For indicating "research field of interest" in the application form, if we don't have music technology included in the dropdown menu yet, you can choose any field you're most interested in, such as (but not limited to) ML General Interests, Natural Language and Speech Processing, Reinforcement Learning, Deep Learning, Human Computer Interaction, or Cognitive AI, etc.<br>
+    For indicating "research field of interest" in the application form, if we don't have music technology included in the dropdown menu yet, you can choose any field you're most interested in, 
+	    such as (but not limited to) ML General Interests, Natural Language and Speech Processing, Reinforcement Learning, Deep Learning, Human Computer Interaction, or Cognitive AI, etc.
     We'll reach out if additional information is needed. You'll probably hear back from MIT in February. Best of luck!
     </p>  
   </td>
