Update index.html quotes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p>
 	     🎵 We have multiple Postdoc positions open for Fall 2025 at <a href="https://musictech.mit.edu/postdoctoral-opportunities/">MIT Music Technology</a>, 
 	     through the <a href="https://shass.mit.edu/">School of Humanities, Arts, and Social Sciences (SHASS)</a> 
-	     as well as the <a href=”https://computing.mit.edu/”>College of Computing</a>.
+	     as well as the <a href="https://computing.mit.edu/”>College of Computing</a>.
 	  </p>
 	  <p>  
 	     🎵 For PhD, apply through MIT <a href="https://www.eecs.mit.edu/academics/graduate-programs/admission-process/">EECS</a> (by Dec 1st). 
